# do-me

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.config/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: yvqbjjc0mcliq0nla5h5mx5rsk6xxf6z-source
.github/workflows/: cd.yml  ci.yml
sql/: schema.sql
src/: action.rs  app.rs  components.rs  config.rs  errors.rs  main.rs  structs.rs
src/components/: fps.rs  home.rs  sort_menu.rs  tasks.rs  workspaces.rs
src/database_ops/: add.rs  mod.rs  output.rs  remove.rs  tests.rs  update.rs
